Update Posts “license”

--- a/content/posts/license.mdx
+++ b/content/posts/license.mdx
@@ -1,4 +1,14 @@
 ---
+code:
+  code: |-
+    const a = '';
+
+    function abc() {
+      
+    }
+
+    export default a;
+  lang: javascript
 slug: license
 title: License
 date: 2020-06-08
