--- a/content/posts/license.mdx
+++ b/content/posts/license.mdx
@@ -1,4 +1,9 @@
 ---
+galleryImages:
+  - /images/icon4.png
+  - /images/icon3.png
+  - /images/icon2.png
+  - /images/icon1.png
 code:
   code: |-
     const a = '';
